--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -45,7 +45,7 @@ jobs:
       run: |
         sing-box rule-set convert --type adguard --output ./rule/adservers.srs ./rule/adservers.txt
     - name: Run script
-      run: python ../main.py && python ../main-noip.py
+      run: python ../main.py && python ../main_noip.py
       working-directory: ./rule/
     - name: Commit and push config.json
       run: |
